[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Frame/Level1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Frame/Level3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Frame/Level2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Frame/Level4.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Scenery/LevelSelect.gd" type="Script" id=5]
[ext_resource path="res://Assets/Frame/LevelSelect.png" type="Texture" id=6]
[ext_resource path="res://Assets/Frame/ExitIcon.png" type="Texture" id=7]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ColorRect" type="TextureRect" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1927.0
margin_bottom = 1087.0
texture = ExtResource( 6 )

[node name="Control" type="Control" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1927.0
margin_bottom = 1087.0

[node name="TextureRect" type="TextureButton" parent="PanelContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 195.0
margin_top = 478.0
margin_right = -1361.0
margin_bottom = -238.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 1 )

[node name="TextureRect2" type="TextureButton" parent="PanelContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 588.0
margin_top = 478.0
margin_right = -968.0
margin_bottom = -238.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="TextureRect3" type="TextureButton" parent="PanelContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 981.0
margin_top = 478.0
margin_right = -575.0
margin_bottom = -238.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="TextureRect4" type="TextureButton" parent="PanelContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1374.0
margin_top = 478.0
margin_right = -147.0
margin_bottom = -238.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="ExitButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = 42.0
margin_right = -1799.0
margin_bottom = -966.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
texture_focused = ExtResource( 7 )

[connection signal="pressed" from="PanelContainer/Control/TextureRect" to="." method="_on_TextureRect_pressed"]
[connection signal="pressed" from="PanelContainer/Control/TextureRect2" to="." method="_on_TextureRect2_pressed"]
[connection signal="pressed" from="PanelContainer/Control/TextureRect3" to="." method="_on_TextureRect3_pressed"]
[connection signal="pressed" from="PanelContainer/Control/TextureRect4" to="." method="_on_TextureRect4_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
